--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-log": "^3.0.2"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "three": "^0.169.0"
