--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
     "mini-css-extract-plugin": "^2.9.1",
-    "sass": "^1.79.2",
+    "postcss-loader": "^8.1.1",
+    "sass": "^1.32.13",
     "sass-loader": "^16.0.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.94.0",
@@ -25,7 +27,9 @@
     "webpack-log": "^3.0.2"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.2.7",
+    "bootstrap": "^5.3.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "three": "^0.169.0"
